cmake: Fix CMP0115 warning explicitly specifying source file extensions
This commit fixes the following warning:

  CMake Warning (dev) at CMakeLists.txt:26 (add_library):
    Policy CMP0115 is not set: Source file extensions must be explicit.  Run
    "cmake --help-policy CMP0115" for policy details.  Use the cmake_policy
    command to set the policy and suppress this warning.

    File:

      /tmp/libffi/src/java_raw_api.c
  This warning is for project developers.  Use -Wno-dev to suppress it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(libffi C)
 set(SOURCES_LIST
     src/closures.c
     $<$<CONFIG:Debug>:src/debug.c>
-    src/java_raw_api
+    src/java_raw_api.c
     src/prep_cif.c
     src/raw_api.c
     src/types.c)
