--- a/include/fficonfig.h.in
+++ b/include/fficonfig.h.in
@@ -1,7 +1,7 @@
 /* fficonfig.h.in.  Generated from configure.ac by autoheader.  */
 
 /* Define if building universal (internal helper macro) */
-#cmakedefine AC_APPLE_UNIVERSAL_BUILD
+#cmakedefine AC_APPLE_UNIVERSAL_BUILD 1
 
 /* Define to one of `_getb67', `GETB67', `getb67' for Cray-2 and Cray-YMP
    systems. This function is required for `alloca.c' support on those systems.
@@ -9,117 +9,117 @@
 #cmakedefine CRAY_STACKSEG_END "@CRAY_STACKSEG_END@"
 
 /* Define if using `alloca.c'. */
-#cmakedefine C_ALLOCA
+#cmakedefine C_ALLOCA 1
 
 /* Define to the flags needed for the .section .eh_frame directive. */
 #cmakedefine EH_FRAME_FLAGS "@EH_FRAME_FLAGS@"
 
 /* Define this if you want extra debugging. */
-#cmakedefine FFI_DEBUG
+#cmakedefine FFI_DEBUG 1
 
 /* Cannot use PROT_EXEC on this target, so, we revert to alternative means */
-#cmakedefine FFI_EXEC_TRAMPOLINE_TABLE
+#cmakedefine FFI_EXEC_TRAMPOLINE_TABLE 1
 
 /* Define this if you want to enable pax emulated trampolines */
-#cmakedefine FFI_MMAP_EXEC_EMUTRAMP_PAX
+#cmakedefine FFI_MMAP_EXEC_EMUTRAMP_PAX 1
 
 /* Cannot use malloc on this target, so, we revert to alternative means */
 #cmakedefine FFI_MMAP_EXEC_WRIT 1
 
 /* Define this if you do not want support for the raw API. */
-#cmakedefine01 FFI_NO_RAW_API
+#cmakedefine FFI_NO_RAW_API 1
 
 /* Define this if you do not want support for aggregate types. */
-#cmakedefine01 FFI_NO_STRUCTS
+#cmakedefine FFI_NO_STRUCTS 1
 
 /* Define to 1 if you have `alloca', as a function or macro. */
-#cmakedefine01 HAVE_ALLOCA
+#cmakedefine HAVE_ALLOCA 1
 
 /* Define to 1 if you have <alloca.h> and it should be used (not on Ultrix).
    */
-#cmakedefine01 HAVE_ALLOCA_H
+#cmakedefine HAVE_ALLOCA_H 1
 
 /* Define if your assembler supports .cfi_* directives. */
-#cmakedefine HAVE_AS_CFI_PSEUDO_OP
+#cmakedefine HAVE_AS_CFI_PSEUDO_OP 1
 
 /* Define if your assembler supports .register. */
-#cmakedefine HAVE_AS_REGISTER_PSEUDO_OP
+#cmakedefine HAVE_AS_REGISTER_PSEUDO_OP 1
 
 /* Define if the compiler uses zarch features. */
-#cmakedefine HAVE_AS_S390_ZARCH
+#cmakedefine HAVE_AS_S390_ZARCH 1
 
 /* Define if your assembler and linker support unaligned PC relative relocs.
    */
-#cmakedefine HAVE_AS_SPARC_UA_PCREL
+#cmakedefine HAVE_AS_SPARC_UA_PCREL 1
 
 /* Define if your assembler supports unwind section type. */
-#cmakedefine HAVE_AS_X86_64_UNWIND_SECTION_TYPE
+#cmakedefine HAVE_AS_X86_64_UNWIND_SECTION_TYPE 1
 
 /* Define if your assembler supports PC relative relocs. */
-#cmakedefine HAVE_AS_X86_PCREL
+#cmakedefine HAVE_AS_X86_PCREL 1
 
 /* Define to 1 if you have the <dlfcn.h> header file. */
-#cmakedefine01 HAVE_DLFCN_H
+#cmakedefine HAVE_DLFCN_H 1
 
 /* Define if __attribute__((visibility("hidden"))) is supported. */
-#cmakedefine HAVE_HIDDEN_VISIBILITY_ATTRIBUTE
+#cmakedefine HAVE_HIDDEN_VISIBILITY_ATTRIBUTE 1
 
 /* Define to 1 if you have the <inttypes.h> header file. */
-#cmakedefine01 HAVE_INTTYPES_H
+#cmakedefine HAVE_INTTYPES_H 1
 
 /* Define if you have the long double type and it is bigger than a double */
-#cmakedefine01 HAVE_LONG_DOUBLE
+#cmakedefine HAVE_LONG_DOUBLE 1
 
 /* Define if you support more than one size of the long double type */
-#cmakedefine HAVE_LONG_DOUBLE_VARIANT
+#cmakedefine HAVE_LONG_DOUBLE_VARIANT 1
 
 /* Define to 1 if you have the `memcpy' function. */
-#cmakedefine01 HAVE_MEMCPY
+#cmakedefine HAVE_MEMCPY 1
 
 /* Define to 1 if you have the <memory.h> header file. */
-#cmakedefine01 HAVE_MEMORY_H
+#cmakedefine HAVE_MEMORY_H 1
 
 /* Define to 1 if you have the `mkostemp' function. */
-#cmakedefine01 HAVE_MKOSTEMP
+#cmakedefine HAVE_MKOSTEMP 1
 
 /* Define to 1 if you have the `mmap' function. */
-#cmakedefine01 HAVE_MMAP
+#cmakedefine HAVE_MMAP 1
 
 /* Define if mmap with MAP_ANON(YMOUS) works. */
-#cmakedefine HAVE_MMAP_ANON
+#cmakedefine HAVE_MMAP_ANON 1
 
 /* Define if mmap of /dev/zero works. */
-#cmakedefine HAVE_MMAP_DEV_ZERO
+#cmakedefine HAVE_MMAP_DEV_ZERO 1
 
 /* Define if read-only mmap of a plain file works. */
-#cmakedefine HAVE_MMAP_FILE
+#cmakedefine HAVE_MMAP_FILE 1
 
 /* Define if .eh_frame sections should be read-only. */
 #cmakedefine HAVE_RO_EH_FRAME
 
 /* Define to 1 if you have the <stdint.h> header file. */
-#cmakedefine01 HAVE_STDINT_H
+#cmakedefine HAVE_STDINT_H 1
 
 /* Define to 1 if you have the <stdlib.h> header file. */
-#cmakedefine01 HAVE_STDLIB_H
+#cmakedefine HAVE_STDLIB_H 1
 
 /* Define to 1 if you have the <strings.h> header file. */
-#cmakedefine01 HAVE_STRINGS_H
+#cmakedefine HAVE_STRINGS_H 1
 
 /* Define to 1 if you have the <string.h> header file. */
-#cmakedefine01 HAVE_STRING_H
+#cmakedefine HAVE_STRING_H 1
 
 /* Define to 1 if you have the <sys/mman.h> header file. */
-#cmakedefine01 HAVE_SYS_MMAN_H
+#cmakedefine HAVE_SYS_MMAN_H 1
 
 /* Define to 1 if you have the <sys/stat.h> header file. */
-#cmakedefine01 HAVE_SYS_STAT_H
+#cmakedefine HAVE_SYS_STAT_H 1
 
 /* Define to 1 if you have the <sys/types.h> header file. */
-#cmakedefine01 HAVE_SYS_TYPES_H
+#cmakedefine HAVE_SYS_TYPES_H 1
 
 /* Define to 1 if you have the <unistd.h> header file. */
-#cmakedefine01 HAVE_UNISTD_H
+#cmakedefine HAVE_UNISTD_H 1
 
 /* Define to the sub-directory where libtool stores uninstalled libraries. */
 #cmakedefine LT_OBJDIR "@LT_OBJDIR@"
@@ -163,14 +163,14 @@
 #cmakedefine STACK_DIRECTION @STACK_DIRECTION@
 
 /* Define to 1 if you have the ANSI C header files. */
-#cmakedefine01 STDC_HEADERS
+#cmakedefine STDC_HEADERS 1
 
 /* Define if symbols are underscored. */
 #cmakedefine SYMBOL_UNDERSCORE
 
 /* Define this if you are using Purify and want to suppress spurious messages.
    */
-#cmakedefine USING_PURIFY
+#cmakedefine USING_PURIFY 1
 
 /* Version number of package */
 #cmakedefine VERSION "@VERSION@"
