cmake: Add support for static Trampolines and fix windows link error
See libffi/libffi@9ba559217
Static Trampolines [...] Support has been added for Linux.

Also fixes the following linking error reported when building
using Visual Studio:

  closures.obj : error LNK2019: unresolved external symbol ffi_tramp_is_supported referenced in function ffi_closure_allo
  c [D:\T\libffi-build\ffi_shared.vcxproj]
  closures.obj : error LNK2019: unresolved external symbol ffi_tramp_alloc referenced in function ffi_closure_alloc [D:\T
  \libffi-build\ffi_shared.vcxproj]
  closures.obj : error LNK2019: unresolved external symbol ffi_tramp_get_addr referenced in function ffi_closure_alloc [D
  :\T\libffi-build\ffi_shared.vcxproj]
  closures.obj : error LNK2019: unresolved external symbol ffi_tramp_free referenced in function ffi_closure_free [D:\T\l
  ibffi-build\ffi_shared.vcxproj]
  D:\T\libffi-build\Release\ffi.dll : fatal error LNK1120: 4 unresolved externals [D:\T\libffi-build\ffi_shared.vcxproj]

--- a/include/fficonfig.h.in
+++ b/include/fficonfig.h.in
@@ -17,6 +17,9 @@
 /* Define this if you want extra debugging. */
 #cmakedefine FFI_DEBUG 1
 
+/* Define this if you want statically defined trampolines */
+#cmakedefine FFI_EXEC_STATIC_TRAMP 1
+
 /* Cannot use PROT_EXEC on this target, so, we revert to alternative means */
 #cmakedefine FFI_EXEC_TRAMPOLINE_TABLE 1
 
@@ -78,6 +81,9 @@
 
 /* Define to 1 if you have the <memory.h> header file. */
 #cmakedefine HAVE_MEMORY_H 1
+
+/* Define to 1 if you have the `mkstemp' function. */
+#cmakedefine HAVE_MKSTEMP 1
 
 /* Define to 1 if you have the `mkostemp' function. */
 #cmakedefine HAVE_MKOSTEMP 1
